--- a/templates/vvt/editDsfa.html.twig
+++ b/templates/vvt/editDsfa.html.twig
@@ -12,7 +12,7 @@
         </div>
         <div class="col-12">
             {% set used = dsfa.vvt not in currentTeam.ignoredInheritances %}
-            {% include 'base/__inheritanceInfo.html.twig' with {team:dsfa.vvt.team, currentTeam:currentTeam, used:used, inherited:dsfa.vvt.inherited} %}
+            {% include 'base/__inheritanceInfo.html.twig' with {team:dsfa.team, currentTeam:currentTeam, used:used, inherited:dsfa.vvt.inherited} %}
             {% include 'base/__flashMessage.html.twig' with {app:app} %}
         </div>
     </div>
