--- a/templates/kontakt/edit.html.twig
+++ b/templates/kontakt/edit.html.twig
@@ -9,6 +9,10 @@
 
     <h2 class="h2-responsive">{{ title }}</h2>
     {{ include('base/__approvedBy.html.twig', {'data':kontakt}) }}
+    {% set inherited = contactInherited(kontakt) %}
+    {% set used = teamUsesContact(currentTeam, kontakt) %}
+    {% include 'base/__inheritanceInfo.html.twig' with {team:kontakt.team, currentTeam:currentTeam, used:used, inherited:inherited} %}
+    {% include 'base/__flashMessage.html.twig' with {app:app} %}
 
     <div class="card card-body {% if kontakt.approved or not kontakt.activ == 1 %}disabled{% endif %}">
         {{ form_start(form) }}
