update transfer repository

--- a/templates/datenweitergabe/edit.html.twig
+++ b/templates/datenweitergabe/edit.html.twig
@@ -26,6 +26,12 @@
                 {{ include('assign/__assign.html.twig',{'data':daten,'path':'assign_datenweitergabe'}) }}
             {% endif %}
         </div>
+        <div class="col-12">
+            {% set inherited = transferInherited(daten) %}
+            {% set used = teamUsesTransfer(currentTeam, daten) %}
+            {% include 'base/__inheritanceInfo.html.twig' with {team:daten.team, currentTeam:currentTeam, used:used, inherited:inherited} %}
+            {% include 'base/__flashMessage.html.twig' with {app:app} %}
+        </div>
     </div>
 
     <div class="card card-body">
