--- a/templates/kontakt/index.html.twig
+++ b/templates/kontakt/index.html.twig
@@ -8,6 +8,7 @@
 {% endblock %}
 {% block body %}
     <h2 class="h2-responsive">{{ title }}</h2>
+    {% include 'base/__flashMessage.html.twig' with {app:app} %}
     <div class="card card-body">
         <div class="table-responsive">
             <table id="data-table" class="table display table-striped">
