--- a/templates/policies/index.html.twig
+++ b/templates/policies/index.html.twig
@@ -9,7 +9,7 @@
 
 {% block body %}
     <h2 class="h2-responsive">{% trans %}policies.internal{% endtrans %}</h2>
-
+    {% include 'base/__flashMessage.html.twig' with {app:app} %}
     <div class="card card-body">
         <div class="table-responsive">
             <table id="data-table" class="table display table-striped ">
