--- a/templates/tom/index.html.twig
+++ b/templates/tom/index.html.twig
@@ -9,6 +9,7 @@
 
 {% block body %}
     <h2 class="h2-responsive">{% trans %}tom.overview{% endtrans %}</h2>
+    {% include 'base/__flashMessage.html.twig' with {app:app} %}
     <div class="card card-body">
         <div class="table-responsive">
             <table id="data-table" class="table display table-striped">
